# wfmeta-darshan

./: .gitignore  README.md  agueroud_python3.10_id56357-56357_4-18-57271-14829777830687840415_1_report.html  darshan_agg.py  hello.py  pyproject.toml  scratch.ipynb
.github/worfklows/: publish_dockers.yaml  publish_dockers.yml
.github/workflows/: publish_dockers.yml  publish_prod_dockers.yml  run_tests.yml
ExampleData/D2024-04-18_15:54:02_R1_W8/: 1871746.polaris-pbs-01.hsn.cm.polaris.alcf.anl.gov.OU  ClientNode  ConsumerNode  MofkaSchedulerPlugin.py  MofkaServerNode  MofkaWorkerPlugin.py  SchedulerNode  WorkerNodes  agueroud_mpiexec_id12761-12761_4-18-57269-1827646417573579734.darshan_partial  agueroud_python3.10_id11297-11297_4-18-57270-11270316508385156860_1.darshan  agueroud_python3.10_id11298-11298_4-18-57270-13530428486158404394_1.darshan  agueroud_python3.10_id11299-11299_4-18-57270-10922612045383985368_1.darshan  agueroud_python3.10_id11300-11300_4-18-57270-4122300395110798318_1.darshan  agueroud_python3.10_id11344-11344_4-18-57271-17151192758656757403_1.darshan  agueroud_python3.10_id11355-11355_4-18-57271-17993944196753836403_1.darshan  agueroud_python3.10_id11357-11357_4-18-57271-17821181598342874394_1.darshan  agueroud_python3.10_id56289-56289_4-18-57270-8277576634548597093_1.darshan  agueroud_python3.10_id56290-56290_4-18-57270-17399172299948385603_1.darshan  agueroud_python3.10_id56291-56291_4-18-57270-5368085710525708666_1.darshan  agueroud_python3.10_id56292-56292_4-18-57270-17876179309173548130_1.darshan  agueroud_python3.10_id56344-56344_4-18-57271-16890002594409975748_1.darshan  agueroud_python3.10_id56345-56345_4-18-57271-5984658206970210667_1.darshan  client.csv  config.json  config.txt  (+23 more)
tests/: test_df_concatenation.py
(+39 files in other folders)
