[project]
name = "wfmeta-darshan"
version = "0.1.0"
description = "wfmeta Tool to read and aggregate Darshan logs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=17.0.0",
    "pandas",
]

[project.scripts]
wfmeta-darshan = "wfmeta_darshan:create_parser_and_run"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath= [
    "src"
]
